@@ -134,6 +134,7 @@ v 8.10.0 (unreleased)
   - Allow bulk (un)subscription from issues in issue index
   - Fix MR diff encoding issues exporting GitLab projects
   - Export and import avatar as part of project import/export
+  - Fix migration corrupting import data for old version upgrades
 
 v 8.9.6
   - Fix importing of events under notes for GitLab projects. !5154
